modified .gitignore, combined Windows, and Node file contents.

--- a/.gitignore
+++ b/.gitignore
@@ -31,27 +31,6 @@ node_modules
 # Operating System Files
 # =========================
 
-# OSX
-# =========================
-
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
 # Windows
 # =========================
 
@@ -73,3 +52,13 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# node-waf configuration
+.lock-wscript
+
+# Compiled binary addons (http://nodejs.org/api/addons.html)
+build/Release
+
+# Dependency directory
+# https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
+node_modules
